styles.css
/* ... */
input:focus, textarea:focus, select:focus, button:focus, input::file-selector-button:focus {
    outline: none;
    border: var(--layout-border-focus);
}
button, input::file-selector-button {
    cursor: pointer;
}
input::placeholder, textarea::placeholder {
    color: rgba(255, 255, 255, 0.5);
}
input[type=range] {
    vertical-align: middle;
}
input[type=number] {
    appearance: textfield;
}
select option:checked {
    color: var(--text-primary-color);
    background-color: var(--accent-color);
}
textarea {
    min-height: 4em;
    min-width: 100%;
    max-width: 100%;
}
select[multiple], textarea {
    vertical-align: top;
}
select[multiple]:focus option:checked {
    background: var(--accent-color) linear-gradient(0deg, var(--accent-color) 0%, var(--accent-color) 100%);
}
input[type="color"] {
    width: 3em;
    height: 1.5em;
}
.toolbar select, .toolbar select:hover, .toolbar select:focus {
    border: none;
    padding-left: 0;
    background-color: unset;
    width: calc(1ch * var(--selected-text-length) + 4ch);
    margin-left: -0.25rem;
    margin-right: 0.5rem;
}
@-moz-document url-prefix() {
    /* mozilla select padding is a bit wider, so apply a smaller margin for firefox */
    .toolbar select, .toolbar select:hover, .toolbar select:focus {
        margin-left: -0.15rem;
    }
}
.toolbar a {
    color: inherit;
    text-decoration: none;
    cursor: pointer;
}
.toolbar button, .toolbar carousel-previous-button, .toolbar carousel-next-button {
    padding-left: 0;
    padding-right: 0;
    border: none;
    background: transparent;
    cursor: default;
}
.toolbar carousel-previous-button.disabled, .toolbar carousel-next-button.disabled {
    visibility: hidden;
    pointer-events: none;
}
.toolbar input[type="checkbox"] {
    display: none;
}
.toolbar input[type="checkbox"] + label {
    position: relative;
}
.toolbar input[type="checkbox"] + label::before {
    font-family: var(--font-family-mdi);
    content: var(--mdi-checkbox-blank-outline);
    padding-right: 0.5rem;
    font-style: normal;
}
.toolbar input[type="checkbox"]:checked + label::before {
    content: var(--mdi-checkbox-marked);
}
.surface,
.overlay-surface,
dropdown-control::part(dropdown-content),
attach-snapping-carousel-navigation-left,
attach-snapping-carousel-navigation-right {
    background-color: var(--surface-bg);
    border-radius: var(--surface-border-radius);
    -webkit-backdrop-filter: blur(10px);
    backdrop-filter:         blur(10px);
    box-shadow:
        inset 0 0 0 1px rgba(255, 255, 255, 0.15), /* inner white border/highlight */
        0 0 0 0.5px rgba(0, 0, 0, 0.65),           /* outer subtle black border */
        0 18px 50px rgba(0, 0, 0, 0.52);           /* surface drop shadow with a vertical offset */
    display: flex;
    flex-direction: column;
    padding: var(--surface-content-padding);
}
.overlay-surface,
dropdown-control::part(dropdown-content) {
    background-color: var(--overlay-surface-bg);
    border-radius: var(--overlay-surface-border-radius);
    -webkit-backdrop-filter: none;
    backdrop-filter:         none;
    padding-top: var(--surface-content-padding-tight);
    padding-bottom: var(--surface-content-padding-tight);
    box-shadow:
        inset 0 0 0 1px rgba(255, 255, 255, 0.15), /* inner white border/highlight */
        0 0 0 0.5px rgba(0, 0, 0, 0.65),           /* outer subtle black border */
        0 4px 6px rgba(0, 0, 0, 0.1);              /* subtle surface drop shadow */
}
.surface-circular,
attach-snapping-carousel-navigation-left,
attach-snapping-carousel-navigation-right {
    cursor: pointer;
    position: relative;
    border-radius: 50%;
    min-width:  var(--surface-circular-diameter);
    min-height: var(--surface-circular-diameter);
    max-width:  var(--surface-circular-diameter);
    max-height: var(--surface-circular-diameter);
    display: flex;
    justify-content: center;
    align-items: center;
    flex: 0;
    transition: background-color var(--surface-bg-transition-duration) var(--transition-timing-function);
}
.surface-circular:hover,
attach-snapping-carousel-navigation-left:hover,
attach-snapping-carousel-navigation-right:hover {
    background-color: var(--surface-bg-active);
}
.surface hr {
    margin-left: calc(-1 * var(--surface-content-padding));
    width: calc(100% + (2 * var(--surface-content-padding)));
    outline: 0;
    border: 0;
    border-bottom: var(--layout-border);
}
.surface h2 {
    font-size: 1em;
    font-weight: 400;
}
.toolbar {
    z-index: 1000;
}
.form-group {
    display: flex;
    flex-direction: column;
    gap: var(--surface-content-padding-tight);
}
scroll-container-vertical {
    padding: var(--surface-content-padding);
    margin-left: calc(-1 * var(--surface-content-padding));
    width: calc(100% + (2 * var(--surface-content-padding)));
    border-top: var(--layout-border);
    border-bottom: var(--layout-border);
    display: flex;
    flex-direction: column;
    overflow-y: auto;
}
scroll-container-horizontal {
    padding: var(--surface-content-padding);
    margin-left: calc(-1 * var(--surface-content-padding));
    width: calc(100% + (2 * var(--surface-content-padding)));
    border-top: var(--layout-border);
    border-bottom: var(--layout-border);
    display: flex;
    flex-direction: row;
    overflow-x: auto;
}
.card-reel {
    --card-reel-gap: var(--surface-content-padding);
    gap: var(--card-reel-gap);
}
.card {
    --card-width: 35ch;
    border: var(--layout-border);
    background-color: var(--overlay-bg);
    padding: 2ch;
    border-radius: 12px;
    height: 9rem;
    width: var(--card-width);
    min-width: var(--card-width);
    font-size: 0.75rem;
    cursor: pointer;
    transition: background-color var(--transition-duration) var(--transition-timing-function);
}
.card:hover {
    background-color: var(--overlay-bg-active);
}
.card-title {
    font-style: italic;
}
.card-title > * {
    font-style: normal;
}
/* ... */

